[package]
name = "mailbox-viewer-tauri"
version = "0.1.0"
description = "Local Outlook mailbox viewer"
authors = ["shorlyn"]
edition = "2021"

[lib]
name = "mailbox_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
arboard = "3"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
url = "2"
